--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
@@ -20,9 +20,9 @@
       <nav class="w-full fixed top-0 bg-white z-10 dark:bg-slate-900">
         <div class="container mx-auto py-5 flex items-center justify-between">
           <div class="flex items-center gap-2">
-            <img class="w-8" src="./img/my-profile.png" alt="" />
+            <img class="w-8" src="./assets/my-profile.png" alt="" />
             <span class="text-2xl font-bold text-indigo-900 dark:text-white"
-              >My Portfolio</span
+              >Risqi Khasani</span
             >
           </div>
           <ul
@@ -46,7 +46,7 @@
           </ul>
           <img
             id="moon"
-            src="./img/moon.png"
+            src="./assets/moon.png"
             class="hidden md:block w-5 cursor-pointer"
             alt=""
           />
@@ -77,38 +77,33 @@
           </ul>
         </div>
       </nav>
-      <!-- intro content -->
-      <!-- image -->
       <img
         class="absolute bottom-0 right-0 lg:left-0 mx-auto h-5/6 object-cover"
-        src="./img/man.png"
+        src="./assets/risqikhasani.png"
         alt=""
       />
-      <!-- circle -->
       <div
         class="hidden lg:block absolute -bottom-1/4 right-0 left-0 mx-auto w-big h-big bg-indigo-900 rounded-full -z-10"
       ></div>
-      <!-- animated text -->
       <div
         class="absolute top-1/3 left-5 text-xl sm:left-10 sm:text-4xl md:left-1/4 md:text-6xl lg:left-5 xl:left-48 xl:text-7xl font-bold"
       >
-        <span class="text-gray-600">Frelance</span>
+        <span class="text-gray-600">Developer</span>
         <p id="text" class="text-red-500"></p>
       </div>
       <!-- texts -->
       <div
         class="hidden lg:flex flex-col gap-5 rounded-md shadow-lg absolute top-0 bottom-0 m-auto right-10 bg-white dark:bg-slate-900 dark:shadow-slate-800 p-6 h-fit w-1/3"
       >
-        <h1 class="text-4xl font-bold text-indigo-900">Hi, I'm Risqi</h1>
+        <h1 class="text-4xl font-bold text-indigo-900">Hi, I'm  Risqi Khasani</h1>
         <p class="text-gray-400">
-          with over 10 years of experience on web design and development. Lorem
-          ipsum dolor sit amet consectetur adipisicing elit. N oumquam quo
-          provident, facere minus temporibus veniam nostrum reprehenderit nihil?
+          I'm a developer and system administrator based in Indonesia. I have a passion for web and system administrator
+          design and .
         </p>
         <a
           class="bg-indigo-600 text-white text-xl px-3 py-2 rounded-md font-semibold w-fit"
-          href="#contact"
-          >Hire Me</a
+          href="#about"
+          >About me</a
         >
       </div>
     </div>
@@ -121,37 +116,28 @@
         <div class="relative">
           <img
             class="h-1/4 absolute top-0 left-0 -z-10"
-            src="./img/dots.png"
+            src="./assets/dots.png"
             alt=""
           />
-          <div class="h-full rounded-full overflow-hidden">
-            <img src="./img/portrait.png" alt="" />
-          </div>
         </div>
         <!-- right -->
         <div class="my-auto flex flex-col gap-3">
-          <h1 class="text-indigo-600 font-bold">ABOUT ME</h1>
-          <h1 class="text-3xl font-medium dark:text-white">Better Design</h1>
-          <h1 class="text-3xl font-medium dark:text-white">
+          <h1 class="text-indigo-600 text center font-bold">ABOUT ME</h1>
+          <h1 class="text-3xl font-medium text-center dark:text-white">Better Dev</h1>
+          <h1 class="text-3xl font-medium text-center dark:text-white">
             Better Experience
           </h1>
           <p class="text-gray-400">
-            I design and build digital products. I'm also a multi-disciplinary
-            maker with over 10 years of experiences in wide range of design
-            disciplines.
+            I am a versatile technology enthusiast with experience as a Junior Application Developer and IT Support Specialist. My journey in technology is driven by a passion for creating innovative solutions and ensuring systems operate smoothly.
+
+As an IT Support at Gunadarma Computerization Development Institute, I have performed various roles, including as an Assistant, Tutor, and course manager. These experiences taught me the importance of adaptability, problem-solving, and providing reliable technical support to users.
+
+In my current role as a Junior Application Developer, I focus on building easy-to-use applications, to provide impactful solutions for the industry. I also hone my programming skills, particularly in Java, and apply object-oriented programming (OOP) concepts to develop practical systems such as food and beverage order management.
+
+
+With a blend of hands-on experience in IT operations and application development, I aim to deliver innovative and reliable solutions. Let's collaborate and turn ideas into reality!
           </p>
-          <h2 class="text-gray-400 font-medium">HTML</h2>
-          <div class="w-full bg-gray-200 h-1.5 rounded-md">
-            <div class="w-full bg-indigo-600 h-1.5 rounded-md"></div>
-          </div>
-          <h2 class="text-gray-400 font-medium">Javascript</h2>
-          <div class="w-full bg-gray-200 h-1.5 rounded-md">
-            <div class="w-4/6 bg-indigo-600 h-1.5 rounded-md"></div>
-          </div>
-          <h2 class="text-gray-400 font-medium">React</h2>
-          <div class="w-full bg-gray-200 h-1.5 rounded-md">
-            <div class="w-5/6 bg-indigo-600 h-1.5 rounded-md"></div>
-          </div>
+          
         </div>
       </div>
     </div>
@@ -163,7 +149,7 @@
           <h1 class="text-indigo-600 font-bold">SERVICES</h1>
           <h1 class="text-3xl dark:text-white">What do I offer?</h1>
           <p class="w-1/2 text-center text-gray-400">
-            My approach to website design is to create a website that
+            My approach is to create a website that
             strengthens your company’s brand while ensuring ease of use and
             simplicity for your audience.
           </p>
@@ -174,11 +160,10 @@
           <div
             class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
-            <img class="w-10" src="./img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <img class="w-10" src="./assets/icon.png" alt="" />
+            <h1 class="font-medium text-lg dark:text-white">Front End Developer</h1>
             <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
+              I specialize in creating interactive and visually appealing websites for individuals and small businesses, ensuring seamless user experiences and responsive designs.
             </p>
             <a class="text-indigo-600 font-semibold text-sm" href=""
               >Read More</a
@@ -188,11 +173,10 @@
           <div
             class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
-            <img class="w-10" src="./img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <img class="w-10" src="./assets/icon.png" alt="" />
+            <h1 class="font-medium text-lg dark:text-white">Back End Developer</h1>
             <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
+              I specialize in building robust server-side applications, managing databases, and implementing secure APIs to support dynamic and scalable systems.
             </p>
             <a class="text-indigo-600 font-semibold text-sm" href=""
               >Read More</a
@@ -202,11 +186,11 @@
           <div
             class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
-            <img class="w-10" src="./img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <img class="w-10" src="./assets/icon.png" alt="" />
+            <h1 class="font-medium text-lg dark:text-white">Full Stack Developer
+            </h1>
             <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
+              I specialize in delivering complete solutions by integrating interactive front-end designs with efficient back-end functionality, creating seamless web applications from start to finish.
             </p>
             <a class="text-indigo-600 font-semibold text-sm" href=""
               >Read More</a
@@ -216,11 +200,10 @@
           <div
             class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
-            <img class="w-10" src="./img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <img class="w-10" src="./assets/icon.png" alt="" />
+            <h1 class="font-medium text-lg dark:text-white">IT Support Specialist            </h1>
             <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
+              I specialize in troubleshooting technical issues, maintaining system reliability, and providing effective support to ensure smooth IT operations for users.
             </p>
             <a class="text-indigo-600 font-semibold text-sm" href=""
               >Read More</a
@@ -230,11 +213,10 @@
           <div
             class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
-            <img class="w-10" src="./img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <img class="w-10" src="./assets/icon.png" alt="" />
+            <h1 class="font-medium text-lg dark:text-white">System Administrator            </h1>
             <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
+              I specialize in managing and optimizing IT infrastructure, ensuring the reliability, security, and scalability of systems for businesses and organizations.
             </p>
             <a class="text-indigo-600 font-semibold text-sm" href=""
               >Read More</a
@@ -244,11 +226,10 @@
           <div
             class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
           >
-            <img class="w-10" src="./img/icon.png" alt="" />
-            <h1 class="font-medium text-lg dark:text-white">UX / UI Design</h1>
+            <img class="w-10" src="./assets/icon.png" alt="" />
+            <h1 class="font-medium text-lg dark:text-white">Machine Learning Engineer</h1>
             <p class="text-gray-400">
-              I specialize in creating interactive websites for individuals and
-              small businesses.
+              I specialize in designing and deploying machine learning models to solve complex problems, leveraging data to deliver intelligent and predictive solutions for businesses.
             </p>
             <a class="text-indigo-600 font-semibold text-sm" href=""
               >Read More</a
@@ -276,49 +257,49 @@
           <div
             class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
           >
-            <img src="./img/item.png" />
+            <img src="./assets/item.png" />
           </div>
           <!-- card -->
           <div
             class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
           >
-            <img src="./img/item.png" />
+            <img src="./assets/item.png" />
           </div>
           <!-- card -->
           <div
             class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
           >
-            <img src="./img/item.png" />
+            <img src="./assets/item.png" />
           </div>
           <!-- card -->
           <div
             class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
           >
-            <img src="./img/item.png" />
+            <img src="./assets/item.png" />
           </div>
           <!-- card -->
           <div
             class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
           >
-            <img src="./img/item.png" />
+            <img src="./assets/item.png" />
           </div>
           <!-- card -->
           <div
             class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
           >
-            <img src="./img/item.png" />
+            <img src="./assets/item.png" />
           </div>
           <!-- card -->
           <div
             class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
           >
-            <img src="./img/item.png" />
+            <img src="./assets/item.png" />
           </div>
           <!-- card -->
           <div
             class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
           >
-            <img src="./img/item.png" />
+            <img src="./assets/item.png" />
           </div>
         </div>
       </div>
@@ -366,17 +347,17 @@
     <div class="w-full bg-gray-800">
       <div class="container mx-auto py-5 flex items-center justify-between">
         <div class="flex items-center gap-2">
-          <img class="w-8" src="./img/my-profile.png" alt="" />
+          <img class="w-8" src="./assets/my-profile.png" alt="" />
           <span class="text-2xl font-bold text-white">My Portfolio</span>
         </div>
         <span class="hidden md:block font-medium text-white"
           >© 2025. Design with ♥️ by Risqi Khasani.</span
         >
         <div class="flex gap-2">
-          <img class="w-4 cursor-pointer" src="./img/facebook.png" alt="" />
-          <img class="w-4 cursor-pointer" src="./img/instagram.png" alt="" />
-          <img class="w-4 cursor-pointer" src="./img/twitter.png" alt="" />
-          <img class="w-4 cursor-pointer" src="./img/linkedin.png" alt="" />
+          <img class="w-4 cursor-pointer" src="./assets/facebook.png" alt="" />
+          <img class="w-4 cursor-pointer" src="./assets/instagram.png" alt="" />
+          <img class="w-4 cursor-pointer" src="./assets/twitter.png" alt="" />
+          <img class="w-4 cursor-pointer" src="./assets/linkedin.png" alt="" />
         </div>
       </div>
     </div>
