change some text

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="#services">services</a>
             </li>
             <li class="hover:text-gray-500">
-              <a href="#works">works</a>
+              <a href="#works">projects</a>
             </li>
             <li class="hover:text-gray-500">
               <a href="#contact">contact</a>
